--- a/05-backbone/css/style.css
+++ b/05-backbone/css/style.css
@@ -1,69 +1,96 @@
-.title {
-	padding-top: 20px;
-	font-size: 44px !important;
-	font-family: "ARIAL";
-	color: #FFF;
+@font-face {
+    font-family: MyriadPro;
+    src: url(../app/resources/MYRIADPRO-REGULAR.OTF);
 }
 
+*, *:before, *:after {
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+}
+
+body {
+	background-color: #334;
+}
+h1 {
+	color: #FFF;
+}
+#App {
+	background-color: #000;
+	margin: 20px;
+	padding: 20px;
+	border-radius: 15px;
+	border: 10px solid #559;
+	position: center;
+	height: ;
+}
 .movie {
-	position: static;
-	height: 200px; 
-	width: 100vw;
-	display: block;
-	color: #FFF;
-	overflow: hidden;
-	text-align: center;
-}
-
-.movie:nth-child(odd) {
-    background-color: #DDC	
-}
-
-.movie:nth-child(even) {
-    background-color: #444;
-}
-
-.movie>div{
-	text-shadow: 1px 1px 10px #000;
+font-family: MyriadPro;
+	
+	margin: 2px;
+	width: 250px;
+	height: 400px;
 	position: relative;
-	font-size: 2rem;
-}
-
-.edit, .remove{
-	height: 50px;
-	width: 50px;
-	font-size: auto;
-	position: relative;
-	color: #444;
+	border: 10px solid #559;
 	float: left;
+	
+	//non selectable text variables
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	box-shadow:  1px 1px 1px #000;
+
+
+	overflow: hidden;
+}	
+
+.movie #options {
+	position: absolute;
+	display: none;
 }
 
-.movie .image {
-	height: auto;
-	margin-top: -200px;
-	width: 90vw;
-	box-shadow: 0px 0px 40px #000;
-	background-color: #FFF;
-
-} 
-.movie:hover {
-	height: 100%; 
-	width: 100vw;
-	text-align:center;
-
-	position:relative;
+.movie #front{
+	text-align: center;
+	width: 100%;
+	display: none;
+	background-color: #777;
+  padding-bottom:10px;
 }
 
+.title {
+	text-shadow: 0 2px 2px #000;
+	padding-top: 10px;
+	color: #FFF;
+	font-size: 40px;
+}
+.genre , .year{
+	color: #333;
+	font-size: 20px
+}
 
-.moviesLibrary {
-	left: 50%;
+.movie .image{
+	height: 100%;
+	width: 100%;
+	box-shadow:  0 0 4px #000;
+	z-index: 1;
+}
+
+#options {
+	float:left;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
 }
 
-@media (min-width: 40rem) {
-	.movie .image {
-		width: 600px;
-	}
+#edit{
+	width: 70%;
+	height: 100%;
+}
+
+#remove{
+	width: 30%;
+	height: 100%;
+	display: inline-block;
 }
