--- a/05-backbone/css/style.css
+++ b/05-backbone/css/style.css
@@ -22,18 +22,23 @@ h1 {
 	border-radius: 15px;
 	border: 10px solid #559;
 	position: center;
-	height: ;
+	clear: both;
+	display: table;
+	text-align: center;
 }
 .movie {
-font-family: MyriadPro;
-	
+	font-family: MyriadPro;
 	margin: 2px;
 	width: 250px;
 	height: 400px;
 	position: relative;
-	border: 10px solid #559;
+	border:10px solid rgba(41, 41, 41, 1);
 	float: left;
 	
+	left: 0;
+	right: 0;
+
+
 	//non selectable text variables
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -41,10 +46,10 @@ font-family: MyriadPro;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	
 	box-shadow:  1px 1px 1px #000;
-
-
 	overflow: hidden;
+
 }	
 
 .movie #options {
@@ -58,6 +63,7 @@ font-family: MyriadPro;
 	display: none;
 	background-color: #777;
   padding-bottom:10px;
+  box-shadow: inset 0px 0px 20px 2px rgba(0,0,0,0.5);
 }
 
 .title {
@@ -74,23 +80,35 @@ font-family: MyriadPro;
 .movie .image{
 	height: 100%;
 	width: 100%;
-	box-shadow:  0 0 4px #000;
-	z-index: 1;
 }
 
 #options {
-	float:left;
 	width: 100%;
 	height: 100%;
 }
 
-#edit{
+#edit.button{
+
+	border: 0px;
+	background-color: #0A1;
 	width: 70%;
 	height: 100%;
 }
 
-#remove{
+#edit.button:hover {
+	background-color: #091;
+}
+
+#remove.button{
+		float:left;
+	position:inline;
 	width: 30%;
 	height: 100%;
 	display: inline-block;
+	border: 0px;
+	background-color: #E00;
+}
+
+#remove.button:hover {
+	background-color: #A00;
 }
